@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007 Andreas Persson
+ * Copyright (C) 2007 Andreas Persson
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -17,10 +17,21 @@
  * 02110-1301 USA.
  */
 
-#include "gigedit.h"
+#ifndef GIGEDIT_LINUXSAMPLER_PLUGIN_H
+#define GIGEDIT_LINUXSAMPLER_PLUGIN_H
 
-int main(int argc, char* argv[])
-{
-    return (argc >= 2) ? GigEdit::run(argv[1])
-                       : GigEdit::run();
-}
+#include <config.h>
+
+#include <linuxsampler/engines/InstrumentEditor.h>
+
+class LinuxSamplerPlugin : public LinuxSampler::InstrumentEditor {
+    public:
+        LinuxSamplerPlugin();
+        virtual int Main(void* pInstrument, String sTypeName, String sTypeVersion);
+        virtual bool IsTypeSupported(String sTypeName, String sTypeVersion);
+        virtual String Name();
+        virtual String Version();
+        virtual String Description();
+};
+
+#endif // GIGEDIT_LINUXSAMPLER_PLUGIN_H
